--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Amani Molinas - Portfolio</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="/dist/assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 
@@ -17,7 +17,7 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="/dist/css/styles.css" rel="stylesheet" />
+        <link href="/css/styles.css" rel="stylesheet" />
 
     </head>
     <body id="page-top">
@@ -36,7 +36,7 @@
         <!-- Header-->
         <header class="masthead d-flex align-items-center">
             <div class="container px-4 px-lg-5 text-center">
-                <img src="/dist/assets/img/Amani Molinas.jpg" class="profile-img">
+                <img src="/Amani Molinas.jpg" class="profile-img">
                 <h1 class="mb-1">Amani Molinas</h1>
                 <h3 class="mb-5"><em>Desarrolladora web enfocada en crear sitios y aplicaciones web funcionales y atractivas, optimizando la experiencia del usuario</em></h3>
                 <a class="btn btn-primary btn-xl" href="#about">Conoce mas sobre mi</a>
@@ -198,6 +198,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <script src="/js/scripts.js"></script>
     </body>
 </html>
